<resources>
    <string name="app_name">Battery Monitor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Battery Monitor</string>
    <string name="nav_header_subtitle">MQTT Battery Reporting</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    <!-- Battery Monitor Strings -->
    <string name="battery_monitor_title">Battery Monitor</string>
    <string name="battery_level">Battery Level</string>
    <string name="mqtt_connection">MQTT Connection</string>
    <string name="mqtt_topic">Topic: phone/battery/level</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="last_update">Last update: Never</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting...</string>
    <string name="battery_monitoring_active">Battery monitoring active</string>
</resources>